 + Randomizing map/theme in online-mode will not include DLC-content
 + New teams start with a random grave and fort
 + Hedgewars creates 4 teams instead of 1 on its first launch
 + Allow to randomize hog names, hats, team name, flag, grave, voice and fort separately
 + “Random team” button is now able to randomly select from all available hats
 * Campaign screen does no longer show AI-controlled teams
 * Campaign names and campaign mission names can now be translated
 * Creating randomized teams now randomizes (almost) every aspect
 * Fixed mostly broken descriptions for multiplayer mission maps
 * Clicking on "New" in weapon scheme editor now creates empty weapon scheme instead of default
 * Fix language names in language list being always in English
 * Prevent starting game with >48 hogs (because engine doesn't support it yet)
 * Team editor Fix flag being selectable for computer players although it had no effect
 * Fix the key for toggling team bars being incorrectly described

Content Creation:
 + Theme objects can now have more than 1 in-land rect specified. You can specify the amount in theme.cfg by adding another number (and ,) before the first rect
 + Theme objects can now be placed on water (by setting first in-land rectangle to 0,0,0,0)
 + Themes can now use flakes with negative falling speed (rising flakes)
 + Themes can now contain custom sound files: splash.ogg Droplet1.ogg Droplet2.ogg Droplet3.ogg skip.ogg
 + Themes can now have mirrored clouds and flakes: CloudsL.png, SDCloudsL.png, FlakeL.png, SDFlakeL.png
 + Water in themes supports custom animation and flow speed with water-animation and sd-water-animation in theme.cfg
 + Simplified hat format for unanimated hats; a single 32×32 image is enough. For clan hats, use size 64×32, with the color overlay at the right
 + Ammos.png and Ammos_bw.png in HWPs are now overlayed over the base images; use transparent icons to keep them unchanged from the original